seems to work now